[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "msl-kcdb"
dynamic = ["version"]
dependencies = []
requires-python = ">= 3.8"
description = "Search the BIPM key comparison database (KCDB)."
license = {file = "LICENSE.txt"}
readme = "README.md"
keywords = ["BIPM", "KCDB", "API", "MSL"]
authors = [
  {name = "Measurement Standards Laboratory of New Zealand", email = "info@measurement.govt.nz"},
]
maintainers = [
  {name = "Joseph Borbely", email = "joseph.borbely@measurement.govt.nz"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development",
]

[project.urls]
Changelog = "https://mslnz.github.io/msl-kcdb/about/release-notes/"
Documentation = "https://mslnz.github.io/msl-kcdb/"
Homepage = "https://mslnz.github.io/msl-kcdb/"
Issues = "https://github.com/MSLNZ/msl-kcdb/issues"
Source = "https://github.com/MSLNZ/msl-kcdb"

[dependency-groups]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
]
doc = [
    "black>=24.8.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.7",
    "mkdocstrings-python>=1.11.1",
]
dev = [
    "mypy>=1.14.1",
    "ipykernel>=6.29.5",
    {include-group = "doc"},
    {include-group = "test"},
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/msl/kcdb/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/msl"]

[tool.pytest.ini_options]
cache_dir = ".cache/pytest"
addopts = [
  "--cov=src",
  "--cov-report=html",
  "--verbose",
  "--import-mode=importlib",
]
consider_namespace_packages = true

[tool.mypy]
strict = true
implicit_reexport = true
namespace_packages = true
warn_unused_ignores = true
cache_dir = ".cache/mypy"

[tool.ruff]
line-length = 120
exclude = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  "build",
  "dist",
  "venv",
]
namespace-packages = ["src/msl"]
extend-include = ["*.ipynb"]

[tool.ruff.lint.isort]
known-first-party = ["msl.kcdb"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D203", # one-blank-line-before-class
  "D213", # multi-line-summary-second-line
  "COM812", # missing-trailing-comma
  "ISC001", # single-line-implicit-string-concatenation
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
  "F401", # Imported but unused
]
"__about__.py" = [
  "F401", # Imported but unused
]
"tests/*.py" = [
  "D100", # Missing docstring in public module
  "D103", # Missing docstring in public function
  "S101", # Use of `assert` detected
  "PLR2004", # Magic value used in comparison
  "INP001", # implicit-namespace-package
]
"*.ipynb" = [
  "T201",  # allow print statements
]

[tool.ruff.lint.pylint]
max-args = 13

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
branch = true
data_file = ".cache/coverage/.coverage"

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
include_namespace_packages = true

[tool.coverage.html]
directory = ".cache/coverage"
title = "MSL-KCDB coverage report"
